Fix gaps and margins

--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,6 @@
     flex-wrap: wrap;
     justify-content: center;
     margin-bottom: 20px;
-    gap: 100px;
 }
 
 
@@ -112,6 +111,7 @@
     display:flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     width: 80%
 }
 
@@ -150,13 +150,17 @@ h1 {
     margin-top: 60px;
     margin-bottom: 0px;
     font-size: 5rem;
+    text-align: center;
     color: var(--second-color);
 }
 
 #status-container {
     display: flex;
     flex-direction: row;
-    gap: 50px;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+
 }
 
 .status-title {
@@ -183,4 +187,5 @@ h1 {
     box-shadow: 0px 0px 30px rgb(0, 0, 0, 0.3) inset, 5px 5px 12px 5px rgba(0, 0, 0, 0.2);
     font-weight: 400;
     font-size: 20px;
+    margin: 20px;
 };
